--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
   "name": "dconsole.js",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "main": "dist/console.js",
+  
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
+  },
+
+  "scripts": {
+  	"build": "babel src --presets env --out-dir dist"
+  },
+
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  }
 }
