--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "dconsole.js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/console.js",
+  "license": "Unlicense",
+
+  "repository" :
+  { 
+    "type" : "git",
+    "url" : "https://github.com/danielskapunk/dconsole.git"
+  },
   
   "devDependencies": {
     "babel-cli": "^6.26.0",
